<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SunFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="2dp"
        android:paddingRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/longitude"
                android:textSize="@dimen/fontSize" />

            <TextView
                android:id="@+id/textLongitude"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:text="123"
                android:textSize="@dimen/fontSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/latitude"
                android:textSize="@dimen/fontSize" />

            <TextView
                android:id="@+id/textLatitude"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:text="123"
                android:textSize="@dimen/fontSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/sunrise_time"
                android:textSize="@dimen/fontSize" />

            <TextView
                android:id="@+id/textSunriseTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:textSize="@dimen/fontSize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/sunrise_azimuth"
                android:textSize="@dimen/fontSize" />

            <TextView
                android:id="@+id/textSunriseAzimuth"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:text="123"
                android:textSize="@dimen/fontSize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/sunset_time"
                android:textSize="@dimen/fontSize" />

            <TextView
                android:id="@+id/textSunsetTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:text="123"
                android:textSize="@dimen/fontSize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/sunset_azimuth"
                android:textSize="@dimen/fontSize" />

            <TextView
                android:id="@+id/textSunsetAzimuth"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:text="123"
                android:textSize="@dimen/fontSize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/morning"
                android:textSize="@dimen/fontSize" />

            <TextView
                android:id="@+id/textMorning"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:text="123"
                android:textSize="@dimen/fontSize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/evening"
                android:textSize="@dimen/fontSize" />

            <TextView
                android:id="@+id/textEvening"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:text="123"
                android:textSize="@dimen/fontSize" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageSun"
            android:layout_width="match_parent"
            android:layout_height="498dp"
            android:layout_weight="1"
            android:padding="30dp" />

    </LinearLayout>

</FrameLayout>