<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MoonFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="3dp"
        android:paddingRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/longitude"
                android:textSize="@dimen/fontSize" />

            <TextView
                android:id="@+id/textLongitude"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:text="123"
                android:textSize="@dimen/fontSize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/latitude"
                android:textSize="@dimen/fontSize" />

            <TextView
                android:id="@+id/textLatitude"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:text="123"
                android:textSize="@dimen/fontSize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/moonrise_time"
                android:textSize="@dimen/fontSize" />

            <TextView
                android:id="@+id/textMoonriseTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:text="123"
                android:textSize="@dimen/fontSize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/moonset_time"
                android:textSize="@dimen/fontSize" />

            <TextView
                android:id="@+id/textMoonsetTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:text="123"
                android:textSize="@dimen/fontSize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/new_moon"
                android:textSize="@dimen/fontSize" />

            <TextView
                android:id="@+id/textNewMoon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:text="123"
                android:textSize="@dimen/fontSize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/full_moon"
                android:textSize="@dimen/fontSize" />

            <TextView
                android:id="@+id/textFullMoon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:text="123"
                android:textSize="@dimen/fontSize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/phase_of_the_moon"
                android:textSize="@dimen/fontSize" />

            <TextView
                android:id="@+id/textPhase"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:text="123"
                android:textSize="@dimen/fontSize" />

        </LinearLayout>


        <ImageView
            android:id="@+id/imageMoon"
            android:layout_width="match_parent"
            android:layout_height="465dp"
            android:layout_weight="1"
            android:padding="30dp" />
    </LinearLayout>
</FrameLayout>