<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundGravity="center_vertical|center|center_horizontal"
            android:gravity="center|center_horizontal|top|center_vertical"
            android:text="@string/title_activity_settings"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textRefresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/refresh"
                android:textSize="@dimen/fontSizeSettings" />

            <EditText
                android:id="@+id/editRefresh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:foregroundGravity="bottom|center_horizontal"
                android:gravity="bottom|center_horizontal"
                android:inputType="number"
                android:paddingBottom="5dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/longitude"
                android:textSize="@dimen/fontSizeSettings" />

            <EditText
                android:id="@+id/editLongitude"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:foregroundGravity="bottom|center_horizontal"
                android:gravity="bottom|center_horizontal"
                android:inputType="numberDecimal"
                android:paddingBottom="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/latitude"
                android:textSize="@dimen/fontSizeSettings" />

            <EditText
                android:id="@+id/editLatitude"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:foregroundGravity="bottom|center_horizontal"
                android:gravity="bottom|center_horizontal"
                android:inputType="numberDecimal"
                android:paddingBottom="5dp" />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:clickable="true"
        app:backgroundTint="#9B9898"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="1.0"
        app:rippleColor="@android:color/white"
        app:srcCompat="@android:drawable/checkbox_on_background" />

</androidx.constraintlayout.widget.ConstraintLayout>